Re-organize activities and fragments
Signed-off-by: Ichizo Umehara <iumehara@pivotal.io>

--- a/app/src/main/res/layout/fragment_restaurant_list.xml
+++ b/app/src/main/res/layout/fragment_restaurant_list.xml
@@ -3,7 +3,7 @@
     android:id="@+id/banana"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RetaurantListFragment"
+    tools:context=".fragments.RetaurantListFragment"
     tools:showIn="@layout/activity_osusume">
 
     <android.support.v7.widget.RecyclerView
