--- a/app/src/main/res/layout/fragment_new_restaurant.xml
+++ b/app/src/main/res/layout/fragment_new_restaurant.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/restaurantDetailsView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/restaurantDetailsName"
+        android:id="@+id/newRestaurantNameField"
+        android:hint="Retaurant Name"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
