--- a/app/src/main/res/layout/fragment_new_restaurant.xml
+++ b/app/src/main/res/layout/fragment_new_restaurant.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/newRestaurantNameField"
-        android:hint="Retaurant Name"
+        android:hint="@string/newRestaurantNameHint"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
