--- a/app/src/main/res/layout/fragment_new_restaurant.xml
+++ b/app/src/main/res/layout/fragment_new_restaurant.xml
@@ -12,4 +12,20 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/newRestaurantCuisineTypeSpinner"
+        android:layout_below="@+id/newRestaurantNameField"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/newRestaurantPriceRangeSpinner"
+        android:layout_below="@+id/newRestaurantCuisineTypeSpinner"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
